# qa-ci-cd-pipeline-template

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  compose.rst  conf.py  pyproject.toml
core/: README.md
core/testcontainers/: __init__.py
core/testcontainers/core/: __init__.py  health.py
core/testcontainers/socat/: __init__.py
core/tests/: README.md  test_auth.py  test_basic.py  test_compose.py  test_config.py  test_core.py  test_core_ports.py  test_core_registry.py  test_docker_client.py  test_docker_in_docker.py  test_health.py  test_image.py  test_labels.py  test_network.py  test_project_settings.py  test_project_structure.py  test_protocol_compliance.py  test_ryuk.py  test_socat.py  test_utils.py  test_version.py  test_wait_strategies.py  test_wait_strategies_integration.py  test_waiting_utils.py
core/tests/compose_fixtures/: README.md
core/tests/image_fixtures/: README.md
docs/: index.md
scripts/: diagnostics.py  mypy_report.py
